--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,49 @@
 <html>
 <head>
   <title>OpenCV Python File Execution</title>
+
+  <style>
+    button {
+      background-color:darkcyan;
+      text-align: center;
+      width: 200px;
+      height: 100px;
+      border-color: darkcyan;
+      font-size: 30px;
+      font-family: 'Times New Roman', Times, serif;
+      cursor: pointer;
+
+      color: white;
+    }
+
+    button:hover {
+      background-color: rgb(0, 100, 100);
+    }
+
+    body {
+      background-color: white;
+    }
+
+    h1 {
+      text-align: center;
+      color: darkcyan;
+    }
+
+    div {
+      display: flex;
+      justify-content: center;
+    }
+
+    
+  </style>
+
 </head>
 <body>
-  <h1>OpenCV Python File Execution</h1>
+  <h1>Lane Detection ACL Hacks 2023</h1>
 
-  <button id="execute-btn">Run OpenCV Python File</button>
+  <div>
+    <button id="execute-btn">Run Lane Detection</button>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
